--- a/Activity 2c/A2c_DL_TC5033.ipynb
+++ b/Activity 2c/A2c_DL_TC5033.ipynb
@@ -1219,6 +1219,75 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "## Using RestNet 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load pre-trained ResNet50 model\n",
+    "model_resnet50 = models.resnet50(pretrained=True)\n",
+    "\n",
+    "# Freeze all the parameters in the feature extractor\n",
+    "for param in model_resnet50.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "# Modify the final fully connected layer to match CIFAR-10 classes\n",
+    "num_classes = 10  # CIFAR-10 has 10 classes\n",
+    "model_resnet50.fc = nn.Linear(model_resnet50.fc.in_features, num_classes)\n",
+    "\n",
+    "# Update transformations\n",
+    "transform_resnet50 = T.Compose([\n",
+    "    T.Resize(224),\n",
+    "    T.ToTensor(),\n",
+    "    T.Normalize(mean=(0.485, 0.456, 0.406),  # ImageNet mean\n",
+    "                std=(0.229, 0.224, 0.225))    # ImageNet std\n",
+    "])\n",
+    "\n",
+    "# Update data loaders\n",
+    "cifar10_train = datasets.CIFAR10(DATA_PATH, train=True, download=True,\n",
+    "                                 transform=transform_resnet50)\n",
+    "train_loader = DataLoader(cifar10_train, batch_size=MINIBATCH_SIZE, \n",
+    "                          sampler=sampler.SubsetRandomSampler(range(NUM_TRAIN)))\n",
+    "\n",
+    "cifar10_val = datasets.CIFAR10(DATA_PATH, train=True, download=True,\n",
+    "                               transform=transform_resnet50)\n",
+    "val_loader = DataLoader(cifar10_val, batch_size=MINIBATCH_SIZE, \n",
+    "                        sampler=sampler.SubsetRandomSampler(range(NUM_TRAIN, len(cifar10_val))))\n",
+    "\n",
+    "cifar10_test = datasets.CIFAR10(DATA_PATH, train=False, download=True, \n",
+    "                                transform=transform_resnet50)\n",
+    "test_loader = DataLoader(cifar10_test, batch_size=MINIBATCH_SIZE)\n",
+    "\n",
+    "# Define optimizer\n",
+    "lr = 5e-4\n",
+    "optimizer = torch.optim.Adam(model_resnet50.fc.parameters(), lr=lr)\n",
+    "\n",
+    "# Train the model\n",
+    "epochs = 3\n",
+    "train(model_resnet50, optimizer, epochs)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "test_accuracy = accuracy(model_resnet50, test_loader)\n",
+    "print(f'Test Accuracy on CIFAR-10 with ResNet50: {test_accuracy:.4f}')\n",
+    "\n",
+    "# Display an image with its prediction\n",
+    "classes = ['Plane', 'Car', 'Bird', 'Cat', 'Deer', 'Dog', 'Frog', 'Horse', 'Ship', 'Truck']\n",
+    "mean = np.array([0.485, 0.456, 0.406])\n",
+    "std = np.array([0.229, 0.224, 0.225])\n",
+    "\n",
+    "index = np.random.randint(len(cifar10_test))\n",
+    "show_prediction(model_resnet50, cifar10_test, index, classes, mean, std)\n"
+   ]
   }
  ],
  "metadata": {
