completando las matrículas

--- a/Activity 2c/Activity_2c_TC5033_Team35.ipynb
+++ b/Activity 2c/Activity_2c_TC5033_Team35.ipynb
@@ -12,8 +12,8 @@
     "\n",
     "- Ruben Díaz Garcia - A01371849\n",
     "- Francisco Antonio Enríquez Cabrera - A01795006\n",
-    "- Jorge Arturo Hernández Morales\n",
-    "- Elmer Jiménez Hernández \n",
+    "- Jorge Arturo Hernández Morales - A01794908\n",
+    "- Elmer Jiménez Hernández - A01795128\n",
     "- Kurt Yañez Badelt - A00394053\n",
     "## Transfer Learning\n",
     "\n",
